--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,247 @@
 ---
-title: "Mlg.github.io"
+title: "MODELOS LINEARES GENERALIZADOS - MLG"                          # --> Título principal do documento
+subtitle: "Notações de Aula"                                           # --> Subtítulo (complementa o título)
+author: "**Alexssandro da Silva Oliveira - Acadêmico de Estatística**" # --> Nome do autor (com negrito usando Quarto)
+date: ""                                                               # --> Data (em branco para não exibir nada)
+date-format: short                                                     # --> Formato da data: curto (ex: 16/04/2025)
+lang: pt                                                               # --> Define o idioma do documento como português
+
+format: 
+  html:                                                                # --> Formatação específica para saída em HTML
+    toc: true                                                          # --> Ativa o sumário (índice)
+    #toc-expand: 3                                                      # --> Define quantos níveis do sumário aparecem abertos por padrão
+    toc-title: Sumário                                                 # --> Título exibido no topo do sumário
+    #toc-depth: 3                                                       # --> Quantos níveis hierárquicos de seções aparecerão no sumário
+    html-math-method: katex                                            # --> Método de renderização matemática (KaTeX é leve e rápido)
+    toc-location: right                                                # --> Coloca o sumário à direita do conteúdo
+    number-sections: true                                              # --> Numera automaticamente as seções e subseções
+    code-fold: true                                                    # --> Código-fonte recolhido por padrão (com opção de expandir)
+    fontsize: 0.9em                                                    # --> Define o tamanho da fonte como 90% do padrão
+    #linestretch: 1.7                                                   # --> Controla o espaçamento entre linhas
+    max-width: 8000em                                                  # --> Define largura máxima MUITO ampla (pode ser ajustado para ~80em, se desejar)
+    margin-left: 0em                                                   # --> Margem esquerda do conteúdo (0 = sem margem)
+    margin-right: 0em                                                  # --> Margem direita do conteúdo (0 = sem margem)
+    margin-bottom: 0em                                                 # --> Margem inferior (sem espaço extra abaixo)
+    margin-top: -1em                                                   # --> Margem superior negativa (levemente "sobe" o conteúdo)
+    #df_print: paged                                                    # --> Impressão paginada de dataframes, se ativado
+    #highlight: espresso                                                # --> Tema de cores para realce de código (sintaxe)
+    #smooth_scroll: TRUE                                                # --> Ativa rolagem suave
+    #css: custom.scss                                                   # --> Aponta para um arquivo personalizado de estilo (opcional, se existir)
+    theme: 
+      light: [flatly]                                                  # -----> Tema visual para o modo claro (Flatly: moderno e claro)
+      dark: [cyborg]                                                   # -----> Tema visual para o modo escuro (Cyborg: fundo escuro e letras claras)
+
+title-block-banner: true                                               # -----> Mostra o título em destaque no topo como um banner
+
+editor: visual                                                         # -----> Define o uso do editor visual (modo WYSIWYG no RStudio, por exemplo)
 ---
 
-This is a Quarto website.
+## Família Exponencial Canônica
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+<br>
 
-```{r}
-1 + 1
+### Família Exponencial Biparamétrica
+
+<br>
+
+::: {style="text-align: justify"}
+Dizemos que uma variável aleatória $Y$ (discreta ou contínua) pertence à família exponencial biparamétrica na forma canônica, $Y \sim \text{FE}(\theta, \phi)$, se sua função densidade (ou de probabilidade) pode ser expressa por
+
+<br>
+
+$$
+f(y;\theta,\phi) = \exp\left\{ \phi \left[y\theta - b(\theta)  \right] + c(y, \phi) \right\} \mathbb{I}_A(y) 
+$$
+
+Em que as componentes são:
+
+<ul style="margin-left: 50px;">
+
+<li style="margin-bottom: 10px;">
+
+$\theta \in \mathbb{R}$ é o <strong>parâmetro canônico</strong> da FE;
+
+</li>
+
+<li style="margin-bottom: 10px;">
+
+$\phi > 0$ é o <strong>parâmetro de precisão</strong>;
+
+</li>
+
+<li style="margin-bottom: 10px;">
+
+$b(\cdot)$ é uma função real, contínua e duas vezes diferenciável;
+
+</li>
+
+<li style="margin-bottom: 10px;">
+
+$c(\cdot\,;\cdot)$ é uma função real não negativa;
+
+</li>
+
+<li style="margin-bottom: 10px;">
+
+$A$ é o suporte da distribuição de $Y$, que não deve depender dos parâmetros, nem de $\theta$ nem de $\phi$.
+
+</li>
+
+</ul>
+
+<br>
+:::
+
+### Família Exponencial Uniparamétrica
+
+<br>
+
+::: {style="text-align: justify"}
+Note que, ao considerarmos o parâmetro de precisão $\phi = 1$, diz-se que a variável aleatória $Y$ (discreta ou contínua) pertence à família exponencial uniparamétrica. Ou seja, $Y \sim \text{FE}(\theta)$, se sua função densidade (ou de probabilidade) puder ser expressa por
+
+<br>
+
+$$
+f(y;\theta,\phi) = \exp\left\{ y\theta - b(\theta) + c(y) \right\} \mathbb{I}_A(y) 
+$$
+:::
+
+
+
+<br>
+
+### Distribuição da Amostra (Função de Verossmilhança)
+
+<br>
+
+::: {style="text-align: justify"}
+
+Seja $\bm{Y} = (Y_{1},Y_{2},\cdots , Y_{n})$ uma amostra aleatória de variáveis aleatórias independentes provenientes de uma população $Y \sim \text{FE}(\theta, \phi)$, tal que a função densidade (ou de probabilidade) de cada $\bm{Y_{i}}$, com $i = 1 ,\cdots , n$ é dada por
+
+<br>
+
+$$
+f(y_{i};\theta_{i},\phi) = \exp\left\{ \phi \left[y\theta_{i} - b(\theta_{i})  \right] + c(y_{i}, \phi) \right\} \mathbb{I}_A(y) \quad \quad \theta \in \mathbb{R}, \quad \phi > 0
+$$
+
+<br> Logo a função de verossimilhança, com representação da **FE** é dada por
+
+<br>
+
+$$
+\begin{aligned}
+\mathcal{L}(\boldsymbol{\theta},\phi) 
+&= \prod_{i = 1}^{n} f(y_{i};\theta_{i},\phi) \\
+&= \prod_{i = 1}^{n} \exp\left\{ \phi \left[y_{i}\theta_{i} - b(\theta_{i})  \right] + c(y_{i}, \phi) \right\} \\
+&= \exp\left\{ \phi \left[y_{1}\theta_{1} - b(\theta_{1})  \right] + c(y_{1}, \phi) \right\} \times \cdots \times \exp\left\{ \phi \left[y_{n}\theta_{n} - b(\theta_{n})  \right] + c(y_{n}, \phi) \right\} \\
+&= \exp\left\{ \phi \sum_{i=1}^{n} \left[y_{i}\theta_{i} - b(\theta_{i})  \right] + \sum_{i=1}^{n} c(y_{i}, \phi) \right\}
+\end{aligned}
+$$
+:::
+
+### Função de Log-Verossmilhança
+
+<br>
+
+::: {style="text-align: justify"}
+
+
+A função de log-verossimilhança com representação da **FE** é dada por <br>
+
+$$
+\begin{aligned}
+\mathcal{\ell}(\boldsymbol{\theta},\phi)  
+&= \log \left\{ \mathcal{L}(\boldsymbol{\theta},\phi) \right\} \\
+&= \log \left\{ \exp\left\{ \phi \sum_{i=1}^{n} \left[y_{i}\theta_{i} - b(\theta_{i})  \right] + \sum_{i=1}^{n} c(y_{i}, \phi) \right\} \right\}\\
+&= \phi \sum_{i=1}^{n} \left[y_{i}\theta_{i} - b(\theta_{i})  \right] + \sum_{i=1}^{n} c(y_{i}, \phi) 
+\end{aligned}
+$$
+:::
+
+
+### Exercícios
+
+
+<br>
+
+::: {style="text-align: justify"}
+
+Para cada distribuição da variável aleatória $Y$ a seguir, mostraremos que ela pertence à família exponencial canônica, identificaremos os componentes e obteremos a esperança $\mu$, a função de variância $V(\mu)$ e a variância de $Y$.
+
+<br>
+
+::: panel-tabset
+
+## Normal
+
+$$
+f(x) = \frac{1}{\sqrt{2\pi\sigma^2}} \exp\left( -\frac{(x - \mu)^2}{2\sigma^2} \right)
+$$
+
+## Poisson
+
+
+$$
+P(X = x) = \frac{e^{-\lambda} \lambda^x}{x!}, \quad x = 0, 1, 2, \dots
+$$
+
+## Binomial
+
+
+$$
+P(X = k) = \binom{n}{k} p^k (1-p)^{n-k}, \quad k = 0, 1, \dots, n
+$$
+
+## Dirichlet
+
+$$
+f(x_1, \ldots, x_k \;|\; \alpha_1, \ldots, \alpha_k) = \frac{\Gamma\left(\sum_{i=1}^{k} \alpha_i \right)}{\prod_{i=1}^{k} \Gamma(\alpha_i)} \prod_{i=1}^{k} x_i^{\alpha_i - 1}, \quad \text{para } x_i \geq 0 \text{ e } \sum_{i=1}^{k} x_i = 1.
+$$
+:::
+
+:::
+
+## Prática
+
+```{r setup, include=FALSE}
+# Define opções padrão para todos os chunks de código no R Markdown
+knitr::opts_chunk$set(
+  echo = FALSE,         # Oculta o código nos resultados finais do documento
+  warning = FALSE,     # Suprime mensagens de aviso (warnings)
+  message = FALSE,     # Suprime mensagens informativas (como as de carregamento de pacotes)
+  fig.width = 10,      # Define a largura padrão das figuras (em polegadas)
+  fig.height = 6       # Define a altura padrão das figuras (em polegadas)
+)
 ```
+
+::: panel-tabset
+## Exemplo de código em R
+
+``` r
+fizz_buzz <- function(fbnums = 1:50) {
+  output <- dplyr::case_when(
+    fbnums %% 15 == 0 ~ "FizzBuzz",
+    fbnums %% 3 == 0 ~ "Fizz",
+    fbnums %% 5 == 0 ~ "Buzz",
+    TRUE ~ as.character(fbnums)
+  )
+  print(output)
+}
+```
+
+## Exemplo de código em Python
+
+``` python
+def fizz_buzz(num):
+  if num % 15 == 0:
+  print("FizzBuzz")
+elif num % 5 == 0:
+  print("Buzz")
+elif num % 3 == 0:
+  print("Fizz")
+else:
+  print(num)
+```
+:::
+
+
