Teste tamanho pagina

--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ format:
     code-fold: true                                                    # --> Código-fonte recolhido por padrão (com opção de expandir)
     fontsize: 0.9em                                                    # --> Define o tamanho da fonte como 90% do padrão
     #linestretch: 1.7                                                   # --> Controla o espaçamento entre linhas
-    max-width: 8000em                                                  # --> Define largura máxima MUITO ampla (pode ser ajustado para ~80em, se desejar)
+    #max-width: null                                                  # --> Define largura máxima MUITO ampla (pode ser ajustado para ~80em, se desejar)
     margin-left: 0em                                                   # --> Margem esquerda do conteúdo (0 = sem margem)
     margin-right: 0em                                                  # --> Margem direita do conteúdo (0 = sem margem)
     margin-bottom: 0em                                                 # --> Margem inferior (sem espaço extra abaixo)
